--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "ava": "^0.25.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.14.0",
     "rollup": "^0.65.2",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-babel-minify": "^6.0.0",
